# faster_ds

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  NLP.py  README.md  README.rst  Taskfile.yml  classification.py  clasterization.py  dimension_reduction.py  docker-compose.yml  examples_of_code.ipynb  feature_selection.py  function_description_style.py  generate_fake_data.py  genindex.html  index.html  main.py  objects.inv  preprocessing.py  prometheus.yml  pyproject.toml  ready_xgboost.py  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.py  temp.py  (+3 more)
.doctrees/: environment.pickle  index.doctree
docs/: make.bat
examples/: classification_example.py  cluster_code.ipynb
faster_ds/: NLP.py  __init__.py  big_files_handling.py  classification.py  clasterization.py  dataframe_info.py  dimension_reduction.py  faster_pipelines.py  feature_selection.py  generate_fake_data.py  handling_imbalanced.py  model_to_production.py  model_tuning.py  multiclass_classification.py  preprocessing.py  ready_xgboost.py  regression.py  test_code.ipynb  timer.py  visualisation.py
faster_llm/: __init__.py  agents.py  doc.py  faster_pipelines.py  integrations.py  test_code.ipynb
info_for_dev/: README.md  code_style.py
make/: python_env.mk
sample_data/: description.md
source/: conf.py  index.rst
templates/: estimator_temp.py
tests/: test_agents.py  test_dl_wrappers.py  test_import.py  (+5 more)
(+51 files in other folders)
